제품명 수정 및 cj 아이콘 삭제

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Things Factory",
-  "short_name": "Things Factory",
+  "name": "Operato",
+  "short_name": "Operato",
   "icons": [{
         "src": "images/touch/icon-72x72.png",
         "sizes": "72x72",
