--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "del": "^2.0.2",
     "es6-promise": "^3.1.2",
     "glob-all": "^3.0.1",
-    "gulp": "^3.8.5",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-cache": "^0.4.0",
     "gulp-changed": "^1.0.0",
@@ -41,6 +41,7 @@
     "node": ">=0.10.0"
   },
   "dependencies": {
+    "bower": "^1.8.8",
     "bower-npm-resolver": "^0.4.0",
     "chart.js": "^2.2.1"
   }
